[package]
name = "deeplayer-indexer"
authors = ["Ibrahim Arogundade (devarogundade@gmail.com)"]
license = "MIT"
publish = false
edition = "2021"
version = "0.1.0"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
# sui-data-ingestion-core = true
# anyhow = true
# async-trait = true
# backoff = true
# base64-url = true
# bcs = true
# bytes = true
# futures = true
# mysten-metrics = true
# object_store = true
# serde = true
# serde_json = true
# serde_yaml = true
# prometheus = true
# telemetry-subscribers = true
tokio = { version = "*", features = ["full"] }
# tracing = true
# sui-name-service = true
# sui-storage = true
# sui-types = true
# url = true
dotenvy = "0.15"
# move-core-types = true
# mysten-service = true
# rustls = true
webpki-roots = "0.26.3"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = "0.7.12"
futures-util = "0.3.30"

[dev-dependencies]
# rand = true
# tempfile = true
